Trying new things

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <input placeholder="Search" id="search-bar">
+<button id="submit" onclick="this.disabled = true" value="Save">Submit</button>
+
+<div id="loading"></div>
 <p id="value"></p>
 
 
